# chinese_classical_rec_sys

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  design-spec.md  requirements-ci.txt
.github/actions/build-windows/: action.yml
.github/workflows/: flutter-build.yml  release.yml  test-build.yml
bridge/: bridge.cpp  c_types.h  export.h  ios_log_sink.h
flutter_app/: pubspec.yaml
flutter_app/android/app/: CMakeLists.txt  build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/chinese_classical_rec_sys/: MainActivity.kt
flutter_app/android/gradle/wrapper/: gradle-wrapper.properties
flutter_app/assets/data/: classical.db  db_version.txt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/bridge/: c_types.dart  ffi_bindings.dart
flutter_app/lib/engine/: app_logger.dart  recommendation.dart  remote_db_sync.dart  tracker.dart  update_checker.dart
flutter_app/lib/models/: text.dart  user.dart  version.dart
flutter_app/lib/pages/: ability_page.dart  article_detail_page.dart  library_page.dart  my_page.dart  read_hub_page.dart  read_page.dart  recommend_page.dart  settings_page.dart
flutter_app/lib/service/: history_service.dart
flutter_app/lib/state/: app_state.dart
flutter_app/lib/theme/: theme.dart
flutter_app/lib/widgets/: dialogs.dart  library_card.dart  radar_chart.dart  reading_frame.dart  recent_reading_list.dart  recommend_card.dart  sidebar.dart  stats_card.dart  text_card.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/test/: widget_test.dart
flutter_app/test/models/: text_test.dart  version_test.dart
flutter_app/test/pages/: page_widget_test.dart
flutter_app/test/state/: app_state_test.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/flutter/ephemeral/.plugin_symlinks/: jni  path_provider_windows  shared_preferences_windows  url_launcher_windows
flutter_app/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  win32_window.cpp
gui/: main_gui.cpp  qml.qrc
gui/qml/: AbilityPage.qml  LibraryPage.qml  MainWindow.qml  ReadPage.qml  RecommendPage.qml  SettingsPage.qml  Sidebar.qml  Theme.qml  qmldir
gui/viewmodel/: AppViewModel.cpp  AppViewModel.h  Paginator.cpp  Paginator.h  RecommendationModel.cpp  RecommendationModel.h  TextFilterProxyModel.cpp  TextFilterProxyModel.h  TextListModel.cpp  TextListModel.h
include/core/: Command.h  CommandRegistry.h  Config.h  ExitCommand.h  HelpCommand.h  KnowledgeTracker.h  LibraryCommand.h  LogCommand.h  ReadCommand.h  RecommendCommand.h  RecommendationEngine.h
include/database/: DatabaseManager.h  LearningIncrementRepository.h  ReadingHistoryRepository.h  TextRepository.h  UserRepository.h
include/models/: Text.h  User.h
include/utils/: CommandParser.h  FeatureExtractor.h  Logger.h  PathUtils.h  TableFormatter.h
packaging/appimage/: build.sh
packaging/linux/: chinese-classical-rec-sys.desktop
packaging/nsis/: installer.nsi
processed_classical/: features.json
processed_classical/anthology/: 三槐堂铭.txt  上书谏猎.txt  上枢密韩太尉书.txt  上梅直讲书.txt  与于襄阳书.txt  与陈给事书.txt  与韩荆州书.txt  严先生祠堂记.txt  丰乐亭记.txt  为徐敬业讨武曌檄.txt  义田记.txt  乐毅报燕王书.txt  乞校正陆贽奏议进御札子.txt  书洛阳名园记后.txt  争臣论.txt  五人墓碑记.txt  五代史伶官传序.txt  五代史宦者传论.txt  五帝本纪赞.txt  五柳先生传.txt  亲政篇.txt  介之推不言禄.txt  令二千石修职诏.txt  伯夷列传.txt  信陵君救赵论.txt  光武帝临淄劳耿弇.txt  公子重耳对秦客.txt  六国论.txt  兰亭集序.txt  冯谖客孟尝君.txt  凌虚台记.txt  刑赏忠厚之至论.txt  前出师表.txt  前赤壁赋.txt  北山移文.txt  单子知陈必亡.txt  卖柑者言.txt  卜居.txt  原毁.txt  原道.txt  (+180 more)
processed_classical/textbook_annotated/: 《老子》四章.txt  《论语》十二章.txt  三峡.txt  与朱元思书.txt  五代史伶官传序.txt  五石之瓠.txt  人皆有不忍人之心.txt  兰亭集序.txt  兼爱.txt  出师表.txt  劝学.txt  北冥有鱼.txt  卖油翁.txt  周亚夫军细柳.txt  咏雪.txt  唐雎不辱使命.txt  大学之道.txt  大道之行也.txt  子路、曾皙、冉有、公西华侍坐.txt  孙权劝学.txt  富贵不能淫.txt  小石潭记.txt  屈原列传.txt  岳阳楼记.txt  师说.txt  庄子与惠子游于濠梁之上.txt  庖丁解牛.txt  归去来兮辞并序.txt  得道多助，失道寡助.txt  愚公移山.txt  曹刿论战.txt  木兰诗.txt  核舟记.txt  桃花源记.txt  活板.txt  湖心亭看雪.txt  烛之武退秦师.txt  爱莲说.txt  狼.txt  生于忧患，死于安乐.txt  (+23 more)
scripts/: build_ios_core.sh  core_sources.txt  init_data.py
src/: main.cpp
src/core/: CommandRegistry.cpp  ExitCommand.cpp  HelpCommand.cpp  KnowledgeTracker.cpp  LibraryCommand.cpp  LogCommand.cpp  ReadCommand.cpp  RecommendCommand.cpp  RecommendationEngine.cpp
src/database/: DatabaseManager.cpp  LearningIncrementRepository.cpp  ReadingHistoryRepository.cpp  TextRepository.cpp  UserRepository.cpp
src/models/: Text.cpp  User.cpp
src/utils/: CommandParser.cpp  FeatureExtractor.cpp  Logger.cpp  PathUtils.cpp
tests/: CMakeLists.txt  test_bridge.cpp  test_engine.cpp  test_math_functions.cpp  test_repository.cpp  test_table_formatter.cpp  test_tracker.cpp
